# efab

./: .gitignore  AGENTS.md  AGENT_BUILDER_INNATE_REFLEX_KERNEL_V1_PLAN.md  AGENT_BUILDER_MIND_LOGIC_DEEP_AUDIT_PLAN_V1.md  AGENT_BUILDER_MIND_REPAIR_PRIORITY_PLAN_V1.md  AGENT_BUILDER_NEXT_15_STEPS_LOCK_V2_R2.md  AGENT_BUILDER_RAM_LIFE_TRANSITION_MASTER_PLAN_V1.md  AGENT_BUILDER_SELF_NOTEBOOK.md  AGENT_MISSION.md  CAPABILITY_ROADMAP.json  GENESIS_BOOTSTRAP__AGENT_BUILDER_v0_1.ps1  GENESIS_STATE.json  GPT_ENTRYPOINT.md  README.md  TASK_QUEUE.json
.githooks/: post-commit  pre-commit
operations/bridge_recovery/payload/: README.md  efab_resilience_supervisor_v3.template.ps1  efab_supervisor_keeper_v1.template.ps1  pyproject.toml
operations/bridge_recovery/payload/schemas/: README.md
operations/bridge_recovery/payload/src/bridge_app/: __init__.py  main.py
operations/bridge_recovery/payload/src/bridge_app/adapters/: __init__.py  codex.py  git.py  terminal.py
operations/bridge_recovery/payload/src/bridge_app/api/: __init__.py
operations/bridge_recovery/payload/src/bridge_app/api/routes/: __init__.py  codex.py  context.py  health.py  repo.py  reports.py  runs.py  terminal.py
operations/bridge_recovery/payload/src/bridge_app/core/: __init__.py  auth.py  config.py  context_check.py  dispatcher.py  errors.py  lifecycle.py  models.py  supervisor.py
operations/bridge_recovery/payload/src/bridge_app/operations/: __init__.py  codex.py  repo.py  reports.py  terminal.py
operations/bridge_recovery/payload/src/bridge_app/storage/: __init__.py  reports.py
(+3092 files in other folders)
